<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_setting"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never" />

    <group android:checkableBehavior="all">
        <item
            android:id="@+id/action_dark"
            android:checked="false"
            android:title="@string/dark"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_replay"
            android:checked="false"
            android:title="@string/replay"
            app:showAsAction="never" />
    </group>

    <item
        android:id="@+id/action_power"
        android:orderInCategory="100"
        android:visible="false"
        android:title="@string/bat_optimization"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>
